--- a/_posts/2018-12-28-testpost.md
+++ b/_posts/2018-12-28-testpost.md
@@ -1,11 +1,11 @@
 ---
-title: "Test post"
-tags: [test posts]
+title: "Save $100 on your next event!"
+tags: [offers]
 date: 2018-12-28
 header:
-  excerpt: "This is a test post."
+  excerpt: "Save $100 on your next event!"
 ---
 
-# H1 Heading this is big
+To show how much we appreciate you choosing Pyrite Events, we're happy to offer a discount for your friends or family hiring us in the future.
 
-This is **bold** text.
+Refer us to a friend and receive a $100 discount on your next event!
