--- a/_posts/2018-12-28-testpost.md
+++ b/_posts/2018-12-28-testpost.md
@@ -9,3 +9,5 @@ excerpt: "Learn how to receive a $100 discount"
 To show how much we appreciate you choosing Pyrite Events, we're happy to offer a discount for your friends or family hiring us in the future.
 
 Refer us to a friend and receive a **$100** discount on your next event!
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/offer.jpg" alt="">
